[BACKLOG-35632] Added options that remove illegal reflective access warnings