@@ -72,11 +72,13 @@ fi
 setPentahoEnv
 
 JAVA_LOCALE_COMPAT=""
+JAVA_ADD_OPENS=""
 if $($_PENTAHO_JAVA -version 2>&1 | grep "version \"11\..*" > /dev/null )
 then
   JAVA_LOCALE_COMPAT="-Djava.locale.providers=COMPAT,SPI"
+  JAVA_ADD_OPENS="--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED"
 fi
 
-exec "$_PENTAHO_JAVA" $JAVA_FLAGS $JAVA_LOCALE_COMPAT -cp "$CP" mondrian.gui.Workbench
+exec "$_PENTAHO_JAVA" $JAVA_ADD_OPENS $JAVA_FLAGS $JAVA_LOCALE_COMPAT -cp "$CP" mondrian.gui.Workbench
 
 # End workbench.sh
